service1/envoy-config.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: "127.0.0.1"
      port_value: 9901
static_resources:
  listeners:

    -
      name: "service1-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 3006
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                route_config:
                  name: "service1-http-route"
                  virtual_hosts:
                    -
                      name: "service1-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service1"
                http_filters:
                  -
                    name: "envoy.router"
    -
      name: "service2-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 3007
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "egress"
                codec_type: "AUTO"
                route_config:
                  name: "service2-http-route"
                  virtual_hosts:
                    -
                      name: "service2-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service2"
                http_filters:
                  -
                    name: "envoy.router"

    -
      name: "service3-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 3008
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "egress"
                codec_type: "AUTO"
                route_config:
                  name: "service3-http-route"
                  virtual_hosts:
                    -
                      name: "service3-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service3"
                http_filters:
                  -
                    name: "envoy.router"                                
  clusters:
      -
        name: "service1"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: "service1"
              port_value: 3005 
      -
        name: "service2"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: "service2_envoy"
              port_value: 3011

      -
        name: "service3"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: "service3_envoy"
              port_value: 3016
